--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
          </div>
       </div>  
       
-   <small> Source cod <a href="https://github.com/Karina0205/6week">Karina Bondar</a></small>
+   <small> Source cod <a href="https://github.com/Karina0205/My-project"> GitHub  </a> 
+   <br>Karina Bondar
+   <a href="https://brilliant-panda-9c97b1.netlify.app/"> Netlify </a></small>
    
     <script src="src/index.js"></script>
     
