--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
 
       <button class="popcity9">Rome</button>
     </div>
-   
 
     <small>
-      Source cod
+      Source code
       <a href="https://github.com/Karina0205/My-project"> GitHub </a>
       <br />Karina Bondar
       <a href="https://brilliant-panda-9c97b1.netlify.app/"> Netlify </a></small
