--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <form class="search" id="search-form">
       <input type="text" id="city-input" placeholder="enter your city" />
       <input type="submit" label="Search" />
-      <button id="location">locate🌐</button>
+      <button id="location" value="locate">locate🌐</button>
     </form>
     <ul></ul>
 
@@ -56,7 +56,7 @@
       </div>
 
       <hr />
-      <button class="popcity1">
+      <button id="popcity1" class="cityParis" value="parisCity">
         <a href="#" id="paris"> Paris </a>
       </button>
 
