--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <img src="src/clouds-2085112__340.webp" alt="" class="fon" />
+    <img src="src/17436.jpg" alt="" class="fon" />
     <form class="search" id="search-form">
       <input type="text" id="city-input" placeholder="enter your city" />
       <input type="submit" label="Search" />
@@ -41,7 +41,7 @@
         <strong id="temperature"> 27</strong>
         <span class="units">
           <a href="#" id="celsius" class="active"> °C </a> |
-          <a href="#" id="fahrenheit"> F </a>
+          <a href="#" id="fahrenheit" class="fahrenheit"> F </a>
         </span>
       </div>
       <h2></h2>
@@ -56,23 +56,37 @@
       </div>
 
       <hr />
+
       <button id="popcity1" class="cityParis" value="parisCity">
         <a href="#" id="paris"> Paris </a>
       </button>
 
-      <button class="popcity2">Kiev</button>
-      <button class="popcity3">Madrid</button>
-
-      <button class="popcity4">Berlin</button>
-
-      <button class="popcity5">London</button>
-      <button class="popcity6">Brussels</button>
-      <button class="popcity7">Budapest</button>
-      <button class="popcity8">Tbilisi</button>
-
-      <button class="popcity9">Rome</button>
+      <button id="popcity2" class="cityKyiv">
+        <a href="#" id="kyiv"> Kyiv </a>
+      </button>
+      <button id="popcity3" class="cityMadrid">
+        <a href="#" id="madrid"> Madrid </a>
+      </button>
+      <button id="popcity4" class="cityBerlin">
+        <a href="#" id="berlin"> Berlin </a>
+      </button>
+      <button id="popcity5" class="cityLondon">
+        <a href="#" id="london"> London </a>
+      </button>
+      <button id="popcity6" class="cityBrussels">
+        <a href="#" id="brussels"> Brussels </a>
+      </button>
+      <button id="popcity7" class="cityBudapest">
+        <a href="#" id="budapest"> Budapest </a>
+      </button>
+      <button id="popcity8" class="cityTbilisi">
+        <a href="#" id="tbilisi"> Tbilisi </a>
+      </button>
+      <button id="popcity9" class="cityRome">
+        <a href="#" id="rome"> Rome </a>
+      </button>
     </div>
-
+<div id="forecast"></div>
     <small>
       Source code
       <a href="https://github.com/Karina0205/My-project"> GitHub </a>
