--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <small>
       Source code
       <a href="https://github.com/Karina0205/My-project"> GitHub </a>
-      <br />Karina Bondar
+      Karina Bondar
       <a href="https://brilliant-panda-9c97b1.netlify.app/"> Netlify </a></small
     >
 
